--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@ body::after {
 
 .container .calculator span {
     display: grid;
+    place-items: center;
     width: 75px;
     height: 75px;
     color: #fff;
@@ -79,4 +80,32 @@ body::after {
     user-select: none;
     border-bottom: 1px solid rgba(255, 255, 255, 0.2);
     border-right: 1px solid rgba(255, 255, 255, 0.2);
+    transition: 0.5s;
+}
+
+.container .calculator span:hover {
+    transition: 0s;
+    background: rgba(255, 255, 255, 0.3);
+}
+
+.container .calculator span:active {
+    background: #451531;
+    color:#64B7CC;
+    font-size: 24px;
+    font-weight: 500;
+}
+
+.container .calculator .clear {
+    grid-column: span 2;
+    width: 150px;
+    background: rgba(255, 255, 255, 0.1);
+}
+
+.container .calculator .plus {
+    grid-row: span 2;
+    height: 150px;
+}
+
+.equal {
+    background: rgba(255, 255, 255, 0.1);
 }
