--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ body::after {
 
 .container .calculator span:active {
     background: #451531;
-    color:#64B7CC;
+    color:#5da9bd;
     font-size: 24px;
     font-weight: 500;
 }
