--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ body::after {
 
 .container .calculator span:active {
     background: #7a2a59;
-    color:#5da9bd;
+    color:#468a9c;
     font-size: 24px;
     font-weight: 500;
 }
